test/files/tokenizer/errors/invalid-symbol-parens.otest
name = "Invalid symbol in parentheses"
line = 2
character = 2
error = 'Unrecognized symbol "$".'

---

($)
